meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__filter_rules_with_device_config.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: service.take_metrics().unwrap()
snapshot_kind: text
---
{
  "device_config": 1.0
}
