meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__legacy_logs_to_metrics_applied_before_filter_rules-metrics.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: service.take_metrics().unwrap()
---
{
  "polite_questions": 3.0
}
