meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__legacy_logs_to_metrics_config-metrics.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: service.take_metrics().unwrap()
---
{
  "polite_questions": 2.0,
  "ssh_sessions_blake_count": 1.0,
  "ssh_sessions_pat_count": 1.0,
  "ssh_sessions_thomas_count": 4.0
}
