meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__legacy_logs_to_metrics_with_service_and_priority-metrics.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: service.take_metrics().unwrap()
---
{
  "ssh_sessions_thomas_count": 4.0
}
