meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__multiple_log_lines.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: "log_entries.into_iter().flat_map(|entry|\n            log_filter.apply_rules(entry)).collect::<Vec<_>>()"
---
[
  {
    "ts": "2004-06-16T12:00:00+00:00",
    "data": {
      "MESSAGE": "another message",
      "_SYSTEMD_UNIT": "test_service",
      "PRIORITY": "6"
    }
  }
]
