meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/logs/snapshots/memfaultd__logs__log_filter__tests__multiple_rules_with_extra_fields-metrics.snap
---
source: memfaultd/src/logs/log_filter.rs
expression: service.take_metrics().unwrap()
---
{
  "foobar_hello_count": 2.0,
  "foobaz_goodbye_count": 1.0,
  "total_goodbye_count": 1.0
}
